# testsmell

./: README.md  pyproject.toml  testsmell.py
tests/: test_testsmell.py
